[gd_scene load_steps=8 format=2]

[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/UI/BuyConfirm.gd" type="Script" id=3]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=5]
[ext_resource path="res://Icons/Chode.png" type="Texture" id=7]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=8]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=9]

[node name="BuyPanel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.0
margin_top = -125.0
margin_right = 424.0
margin_bottom = 159.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 442.663
margin_top = -21.2159
margin_right = 482.663
margin_bottom = -7.21588
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopName" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 442.663
margin_top = -21.2159
margin_right = 482.663
margin_bottom = -7.21588
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCost" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 442.663
margin_top = -21.2159
margin_right = 482.663
margin_bottom = -7.21588
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopCount" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 442.663
margin_top = -21.2159
margin_right = 482.663
margin_bottom = -7.21588
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="DropPanelContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="DropPanelContainer"]
margin_right = 10.0
margin_bottom = 284.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="MainNodes" type="VBoxContainer" parent="DropPanelContainer"]
margin_left = 14.0
margin_right = 834.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="DropPanelContainer/MainNodes"]
visible = false
margin_right = 720.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="Label" type="Label" parent="DropPanelContainer/MainNodes"]
margin_right = 820.0
margin_bottom = 57.0
theme = ExtResource( 1 )
text = "How many do you want to Buy?"
autowrap = true

[node name="SellAmount_Cont" type="HBoxContainer" parent="DropPanelContainer/MainNodes"]
margin_top = 61.0
margin_right = 820.0
margin_bottom = 161.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="SpinBox" type="SpinBox" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_right = 302.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
rounded = true
align = 1

[node name="multiplied" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 306.0
margin_right = 359.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
text = "x"
align = 1
valign = 1

[node name="item_price_cont" type="ColorRect" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 363.0
margin_right = 578.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="item_price" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont/item_price_cont"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.29236
margin_right = 1.29236
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equals" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 582.0
margin_right = 600.0
margin_bottom = 100.0
size_flags_vertical = 3
text = "="
align = 1
valign = 1

[node name="Total_price_container" type="ColorRect" parent="DropPanelContainer/MainNodes/SellAmount_Cont"]
margin_left = 604.0
margin_right = 820.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Price" type="HBoxContainer" parent="DropPanelContainer/MainNodes/SellAmount_Cont/Total_price_container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total_Price_Display" type="Label" parent="DropPanelContainer/MainNodes/SellAmount_Cont/Total_price_container/Total_Price"]
margin_right = 125.0
margin_bottom = 100.0
rect_min_size = Vector2( 125, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
text = "0"
align = 2
valign = 1

[node name="CurrencyIcon" type="TextureRect" parent="DropPanelContainer/MainNodes/SellAmount_Cont/Total_price_container/Total_Price"]
margin_left = 129.0
margin_right = 216.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="DropPanelContainer/MainNodes"]
margin_top = 165.0
margin_right = 820.0
margin_bottom = 265.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Set Max" parent="DropPanelContainer/MainNodes/Buttons" instance=ExtResource( 9 )]
margin_right = 270.0
margin_bottom = 100.0

[node name="Buy Selected" parent="DropPanelContainer/MainNodes/Buttons" instance=ExtResource( 9 )]
margin_left = 274.0
margin_right = 544.0
margin_bottom = 100.0

[node name="Close" parent="DropPanelContainer/MainNodes/Buttons" instance=ExtResource( 9 )]
margin_left = 548.0
margin_right = 820.0
margin_bottom = 100.0

[node name="BottomMargin" type="Label" parent="DropPanelContainer/MainNodes"]
margin_top = 269.0
margin_right = 820.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="RightMargin" type="Label" parent="DropPanelContainer"]
margin_left = 838.0
margin_right = 848.0
margin_bottom = 284.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="NSFColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.670588 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 81.0
margin_bottom = -28.0
theme = ExtResource( 2 )
color = Color( 0.0901961, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NSFText" type="Label" parent="NSFColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="DropPanelContainer/MainNodes/SellAmount_Cont/SpinBox" to="." method="_on_SpinBox_value_changed"]
